Fix T94184: Outliner: Collection dragging tooltip is not updating

In the context of the dragdrop tooltip, the event referenced to the window
is out of date and contains invalid `mval` values.

Avoid using `win->eventstate` as much as possible.